# gemstone.builders

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json
.github/workflows/: build-and-publish.yml
circuit/: basic_test.go  go.mod  go.sum  main.go
circuit_artifacts/: assembly5.wasm
circuits/: circuits.json  package.json
circuits/circuits/: assembly.circom  factory.circom
circuits/circuits/main/: assembly3.circom  assembly5.circom  factory3.circom
circuits/inputs/assembly5/: default.json  public.json
circuits/inputs/factory3/: default.json
circuits/src/: index.ts
circuits/tests/: assembly.test.ts  factory.test.ts  float_add.test.ts  sudoku.test.ts
contracts/: basic.sh  deployLocal.sh  deploySepolia.sh  registerFactory.sh  remappings.txt
contracts/script/: TestingSetup.s.sol
contracts/src/: Factory.sol  Resource.sol  groth16_verifier.sol
contracts/test/: Factory.t.sol  Resource.t.sol
crates/common/: Cargo.toml
crates/common/src/: buildings.rs  lib.rs
crates/poseidon-helper/: Cargo.toml
crates/poseidon-helper/src/: main.rs
crates/prover/: Cargo.toml
crates/prover/src/: abi.rs  app.rs  calldata.rs  game.rs  hashing.rs  main.rs  tasks.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
design/: Resources.md
docs/: wasm_and_packages.md
exp/: map.ipynb  noise.ipynb  perlin.ipynb
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  UserContext.js  api.js  consts.js  index.js
frontend/src/components/: BuildingGrid.js  ClickableGrid.js  ControlPanel.js  Element.js  Footer.js  Grid.js  Header.js  Loader.js  MainGrid.js  ModeSwitch.js  NotConnected.js  ResourceGrid.js  Resources.js  SimulationState.js  State.js
game/: index.html  package-lock.json  package.json  vite.config.ts
game/src/: building.ts  consts.ts  doc.ts  game.ts  item.ts  keyboard.ts  main.ts  math.ts  mouse.ts  renderer.ts  style.css  terrain.ts  time.ts  utils.ts
game/src/building/: arm.ts  belt.ts  beltDown.ts  beltLeft.ts  beltRight.ts  beltUp.ts  empty.ts  factory.ts  mine.ts  zkIds.ts
game/src/rendering/: renderer.ts
godot_client/: project.godot  tileset.psd  tileset.tres
godot_client/assets/: icon.svg.import  tileset.png.import  white.png.import
godot_client/scenes/: diamond.tscn  noise_experiments.tscn  old_root.tscn  root.tscn
godot_client/scripts/: building.gd  buildings.gd  root.gd
godot_client/scripts/buildings/: test_building.gd
godot_client/shaders/: noise.gdshader  noiseMatShader.tres
godot_client/sprites/: diamond.tres  error_marker.tres
noise/: Cargo.toml  Makefile
noise/host/: Cargo.toml
noise/host/src/: main.rs
noise/js/: Cargo.toml  README.md
noise/js/src/: lib.rs
noise/map/: Cargo.toml  noise.toml
noise/map/src/: main.rs  noise_config.rs
noise/methods/guest/: Cargo.toml
noise/methods/guest/src/: main.rs
noise/noise/: .gitignore  Cargo.toml
noise/noise/src/: lib.rs  map.rs  perm.rs  simplex.rs
poseidon-helper/: Cargo.toml
prover/: Cargo.toml
res/: tileset.psd
res/manim/: .gitignore  all.sh  coordinate_skewing.py  manim
res/ps/: tileset.psd
website/: Dockerfile  fly.toml  package-lock.json  package.json  tailwind.config.mjs
website/src/components/: logo.astro
website/src/content/: config.ts
website/src/content/blog/: noise.md
website/src/content/docs/: getting_started.md
website/src/icons/: AppIcon.astro  GemIcon.astro  MapIcon.astro
website/src/layouts/: BaseLayout.astro  BlogLayout.astro  DocsLayout.astro
website/src/lib/: MapExplorer.ts
website/src/pages/: index.astro
website/src/pages/blog/: [...slug].astro  index.astro
website/src/pages/docs/: [...slug].astro  index.astro
website/src/pages/map/: index.astro
website/src/styles/: global.css
