[workspace]
resolver = "2"
members = [ "crates/*" ]

[workspace.dependencies]
dotenvy = "0.15"
clap = { version = "4.5.4", features = ["env", "derive"] }
tokio = { version = "1.37.0", features = ["full"] }
poseidon-rs = "0.0.10"
# Version 0.11 forced for poseidon-rs
ff_ce = { version = "=0.11", features = ["derive"] }
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.117"
config = "0.14.0"
serde = { version = "1.0.202", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors", "timeout", "trace"] }
anyhow = "1.0"

[profile.release]
debug = true
strip = false
