[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

dotenvy = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
poseidon-rs = { workspace = true }
ff_ce = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }

indoc = "*"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "e22d9be", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-wallet",
] }
# Explicit import needed for sol! macro to work
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "e22d9be" }
alloy-sol-types = "0.7"
reqwest = "0.12.4"
num-bigint = "0.4.5"
num-traits = "0.2.19"
tempfile = "3.10.1"
rand = "0.8.5"

