[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

dotenvy = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
poseidon-rs = { workspace = true }
ff_ce = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
