[package]
name = "map"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive", "env"] }
image = "0.25.1"
indoc = "2.0.5"
noise = { path = "../noise" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
