[package]
name = "noise"
version = "0.1.0"
edition = "2021"

[dependencies]
fixed = { version = "1.27.0", features = ["serde-str"] }
rand = { version = "0.8.5", optional = true, features = [ "small_rng" ] }
siphasher = "1"
twox-hash = "1"

[dev-dependencies]
image = "0.25.1"

[features]
default = ["rand"]
